--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
-          working-directory: docs
+          working-directory: ./docs/package-lock.json
 
       - name: Install dependencies (docs)
         run: npm ci
@@ -38,4 +38,5 @@ jobs:
           publish_dir: ./docs/build
           publish_branch: gh-pages
           # If you use a custom domain (CNAME) placed under docs/, the action will preserve it
+
 
