--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,15 +16,12 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
-          working-directory: ./docs/package-lock.json
 
       - name: Install dependencies (docs)
         run: npm ci
-        working-directory: ./docs
 
       - name: Build (docs)
         run: npm run build
-        working-directory: ./docs
 
       - name: Show built files (for debugging)
         run: |
@@ -35,9 +32,10 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs/dist
+          publish_dir: ./docs/build
           publish_branch: gh-pages
           # If you use a custom domain (CNAME) placed under docs/, the action will preserve it
+
 
 
 
